--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
