--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate:linear": "node ./src/data/helpers/generate-linear-ontology.js ./src/data/nodes.json ./src/data/edges.json ./src/data/"
   },
   "dependencies": {
+    "fuzzyset": "^1.0.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/fuzzyset": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
