--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "stopword": "^3.0.1"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -25,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.33",
+    "@types/stopword": "^2.0.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
