--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "generate:linear": "node ./src/data/helpers/generate-linear-ontology.js ./src/data/nodes.json ./src/data/edges.json ./src/data/"
   },
   "dependencies": {
+    "@react-sigma/core": "^4.0.2",
+    "@types/webgl2": "^0.0.11",
     "fuzzyset": "^1.0.7",
+    "graphology": "^0.25.4",
+    "graphology-types": "^0.24.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.0",
+    "react-sigma": "^1.2.35",
+    "sigma": "^3.0.0-beta.17",
     "stopword": "^3.0.1"
   },
   "devDependencies": {
