--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate:linear": "node ./src/data/helpers/generate-linear-ontology.js ./src/data/nodes.json ./src/data/edges.json ./src/data/"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.7",
     "fuzzyset": "^1.0.7",
     "next": "14.1.0",
     "react": "^18",
